--- a/style.css
+++ b/style.css
@@ -34,11 +34,18 @@ p {
   margin-left: 0;
   font-size: 1.5rem;
 }
+.btn {
+  position: fixed;
+  right: 20%;
+  bottom: 20%;
+  background-color: blue;
+  color: white;
+  padding: 5px;
+  border: none;
+  outline: none;
+}
 a {
   text-decoration: none;
   font-size: 1.3rem;
   color: white;
-}
-a:hover {
-  color: blue;
 }
