--- a/style.css
+++ b/style.css
@@ -9,7 +9,9 @@ body {
   width: 100%;
   max-width: 500px;
   margin: 0 auto;
-  background-color: #9ad8c3;
+  background-image: url('odin.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .container {
@@ -18,7 +20,6 @@ body {
   background-image: url('odin.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 80vh;
   text-align: center;
   padding-top: 50px;
   color: white;
