--- a/style.css
+++ b/style.css
@@ -9,9 +9,7 @@ body {
   width: 100%;
   max-width: 500px;
   margin: 0 auto;
-  background-image: url('odin.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-color: #9ad8c3;
 }
 
 .container {
@@ -21,6 +19,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
+  height: 100vh;
   padding-top: 50px;
   color: white;
 }
