--- a/style.css
+++ b/style.css
@@ -20,9 +20,17 @@ body {
   color: white;
 }
 
+.image {
+  width: fit-content;
+  border-radius: 100%;
+  text-align: center;
+  margin: 0 auto;
+}
 img {
   height: 200px;
   width: 200px;
+  border: none;
+  border-radius: 50%;
 }
 
 p {
