--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
   height: 100vh;
 }
 .game-container {
-  height: 90vh;
+  min-height: 90vh;
   width: 90vw;
   max-width: 350px;
   background: white;
@@ -32,6 +32,25 @@ body {
   font-size: 48px;
   font-weight: bold;
   color: rebeccapurple;
+}
+.gameInstructions {
+  color: slategray;
+  font-size: 20px;
+}
+.game-status {
+  margin-top: 15px;
+  animation: status 3s infinite ease-in-out;
+  position: relative;
+  height: 1.2rem;
+}
+@keyframes status {
+  from {
+    transform: translateY(0%);
+    font-size: 0.4rem;
+  }
+  to {
+    transform: translateY(30%);
+  }
 }
 .color-box {
   width: 150px;
@@ -77,5 +96,7 @@ body {
 
 .scoreboard {
   margin-top: 15px;
-  font-size: 18px;
+}
+.game-score {
+  font-size: 20px;
 }
