--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,8 @@ body {
   height: 100vh;
 }
 .game-container {
-  min-height: 90vh;
+  min-height: 94vh;
+  max-height: 500px;
   width: 90vw;
   max-width: 350px;
   background: white;
