--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,6 @@ body {
   padding-top: 20px;
 }
 .game-container {
-  height: 94vh;
   width: 90vw;
   max-width: 350px;
   background: white;
@@ -100,4 +99,6 @@ body {
 }
 .game-score {
   font-size: 20px;
+}
+@media (min-width: 640px) {
 }
