Stage two tasked dropped

--- a/src/index.css
+++ b/src/index.css
@@ -1,101 +1,10 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
+@import 'tailwindcss';
 body {
-  font-family: Arial, sans-serif;
-  background-color: #c8c8df;
-  text-align: center;
-}
-
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 99vh;
-}
-.game-container {
-  width: 90vw;
-  max-width: 380px;
-  background: white;
-  padding: 20px;
-  border-radius: 10px;
-  max-width: 400px;
-  margin: auto;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.game-header {
-  font-size: 48px;
-  font-weight: bold;
-  color: rebeccapurple;
-}
-.gameInstructions {
-  color: slategray;
-  font-size: 20px;
-}
-.game-status {
-  margin-top: 15px;
-  animation: status 3s infinite ease-in-out;
-  position: relative;
-  height: 1.2rem;
-}
-@keyframes status {
-  from {
-    transform: translateY(0%);
-    font-size: 0.4rem;
-  }
-  to {
-    transform: translateY(30%);
-  }
-}
-.color-box {
-  width: 150px;
-  height: 150px;
-  margin: 20px auto;
-  border: 3px solid #000;
-}
-
-.color-options {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
-}
-
-.color-button {
-  width: 100%;
-  max-width: 150px;
-  height: 100px;
-  border: none;
-  cursor: pointer;
-  border-radius: 5px;
-  transition: transform 0.2s ease;
-}
-
-.color-button:hover {
-  transform: scale(1.1);
-}
-
-.new-game-button {
-  margin-top: 15px;
-  padding: 10px 20px;
-  background-color: #007bff;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 20px;
-}
-
-.new-game-button:hover {
-  background-color: #0056b3;
-}
-
-.game-score {
-  margin-top: 15px;
-  font-size: 20px;
-}
-@media (min-width: 640px) {
+  background: radial-gradient(
+      52.52% 32.71% at 50% 97.66%,
+      rgba(36, 160, 181, 0.2) 0%,
+      rgba(36, 160, 181, 0) 100%
+    ),
+    #02191d;
+  background-repeat: no-repeat;
 }
